[package]
name = "patcher"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
crc = "3.2.1"
flips = "0.2.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
zip-extract = "0.2.2"
